# realtime-stt-chat

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml  server.py  stt.py
web/: package-lock.json  package.json
web/src/: App.tsx
web/src/audio/: encorder.ts  recorder.ts
web/src/gpt/: api.ts
web/src/stt/: api.ts  stt.ts
